--- a/login.html
+++ b/login.html
@@ -13,36 +13,46 @@
     <!-- Navigation Section -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="#">
-                <img src="img/placeholder_logo.png" width="40" height="40" alt="">
+            <!--logo-->
+            <a class="navbar-brand mr-auto" href="home.html">
+                <img src="img/logo.png" width="50" height="50" alt="">
                 <span class="fw-bold text-secondary">
                     Parts Off
                 </span>
             </a>
+
+            <!-- Toggle button for small screens -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
+
             <div class="collapse navbar-collapse" id="navbarNav">
+                <!--search-->
+                <form class="d-flex mx-auto">
+                    <input class="form-control" type="search" placeholder="Search" aria-label="Search" size="70">
+                </form>
+
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="home.html">Home</a>
-                    </li>
+                    <!--Cart-->
                     <li class="nav-item">
                         <a class="nav-link" href="cart.html">Cart</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="login.html">Login</a>
+
+                    <!--Profile-->
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Profile
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="MyAccount.html">Profile</a>
+                            <a class="dropdown-item" href="login.html">Login</a>
+                            <a class="dropdown-item" href="signup.html">Sign Up</a>
+                        </div>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="signup.html">Sign Up</a>
-                    </li>
-                    <form class="my-2 my-lg-0">
-                        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                    </form>
                 </ul>
             </div>
-        </div> 
-    </nav>  
+        </div>
+    </nav>
 
     <section style ="margin-bottom: 369px;">
         <div class="container mt-5 pt-5">
@@ -61,7 +71,7 @@
                                 <input type="password" name="" id="" class="form-control my-4 py-2" placeholder="Password">
                                 <div class="text-center">
                                     <button class="btn btn-primary">Login</button>
-                                    <a href="#" class="nav-link">Don't have an account?</a>
+                                    <a href="signup.html" class="nav-link">Don't have an account?</a>
                                     <a href="#" class="nav-link">Forgot password?</a>
                                 </div>
                             </form>
