--- a/checkout.html
+++ b/checkout.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,8 +8,9 @@
     <title>Parts Off - Checkout</title>
 </head>
 
-<body class="bg-light">
-    <!-- Navigation Section -->
+<body>
+
+   <!-- Navigation Section -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
             <!--logo-->
@@ -55,37 +55,46 @@
     </nav>
 
     <!-- Checkout Section -->
-    <section style="margin-bottom: 369px;">
-        <div class="container mt-5 pt-5">
-            <div class="row justify-content-center">
-                <div class="col-md-8">
-                    <div class="card border-0 shadow">
-                        <div class="card-body">
-                            <h5 class="card-title">Shopping Cart</h5>
-                            <ul class="list-group mb-3">
-                                <!-- Example item in the cart: GTX 1080 Ti -->
-                                <li class="list-group-item d-flex justify-content-between lh-sm">
-                                    <div>
-                                        <h6 class="my-0">NVIDIA GeForce GTX 1080 TI Founders Edition 11GB GDDR5X Graphic Card</h6>
-                                        <small class="text-muted">High-performance graphics card for gaming</small>
-                                    </div>
-                                    <span class="text-muted">$19,082.31</span>
-                                </li>
+    <div class="container mt-5 mb-5">
+        <div class="row justify-content-md-center">
+            <div class="col-md-8">
+                <h2>Checkout</h2>
+                <div class="card">
+                    <div class="card-body">
+                        <!-- Displaying Cart Items -->
+                        <h5 class="card-title">Cart Items</h5>
 
-                                <!-- Add more items as needed -->
-
-                                <li class="list-group-item d-flex justify-content-between">
-                                    <span>Total (PHP)</span>
-                                    <strong>$19,082.31</strong>
-                                </li>
-                            </ul>
-                            <button class="btn btn-primary" onclick="document.location='Checkout.html'">Proceed to Checkout</button>
+                        <!-- Example for one item (you can loop through all items in your cart) -->
+                        <div class="cart-item">
+                            <img src="img/1080.png" alt="Product Image" width="80" height="80">
+                            <h5 class="card-title mt-3">NVIDIA GeForce GTX 1080 TI Founders Edition 11GB GDDR5X Graphic Card</h5>
+                            <h4 class="card-subtitle mb-2 text-muted">Price: PHP 19,082.31</h4>
                         </div>
+
+                        <!-- User Information Form -->
+                        <form id="checkoutForm" onsubmit="return processOrder()">
+                            <h5 class="card-title mt-4">User Information</h5>
+                            <div class="mb-3">
+                                <label for="fullName" class="form-label">Full Name</label>
+                                <input type="text" class="form-control" id="fullName" required>
+                            </div>
+                            <div class="mb-3">
+                                <label for="email" class="form-label">Email Address</label>
+                                <input type="email" class="form-control" id="email" required>
+                            </div>
+                            <div class="mb-3">
+                                <label for="address" class="form-label">Shipping Address</label>
+                                <textarea class="form-control" id="address" rows="3" required></textarea>
+                            </div>
+                            <button type="submit" class="btn btn-primary">Complete Purchase</button>
+                        </form>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
+    </div>
+
+
 
     <!-- Footer Section -->
     <footer class="bg-dark text-white py-3">
@@ -93,7 +102,15 @@
             <p>&copy; 2024 Turd:Re. All rights reserved.</p>
         </div>
     </footer>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
-</body>
 
+    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
+
+    <script>
+        function processOrder() {
+            // Perform order processing logic here (e.g., send data to a server)
+            alert('Order processed successfully!');
+            return false; // Prevent form submission for this example
+        }
+    </script>
+</body>
 </html>
